--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "git": "^0.1.5",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
+    "npm-install-webpack-plugin": "^3.0.0",
     "popper.js": "^1.14.5",
     "to": "^0.2.9"
   },
@@ -23,7 +24,7 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^1.0.1",
     "ejs": "^2.5.9",
